--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,4 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@100;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.section-p1 {
+    padding: 40px 80px;
+}
+  
+.section-m1 {
+    margin: 40px 0;
+}
+
+/* ipad */
+@media (max-width:799px){
+    .section-p1{
+      padding: 40px 40px;
+    }
+}
+
+/* mobile */
+@media (max-width:477px){
+    .section-p1{
+      padding: 20px;
+    }
+}
