--- a/my-app/src/Components/UI/HomeComp/Offer/offer.css
+++ b/my-app/src/Components/UI/HomeComp/Offer/offer.css
@@ -7,9 +7,7 @@
     margin-top: 50px;
     width: 100%;
     height: 100%;
-    background-image: url(../../../../assets/images/Untitled-5.png);
-    background-position: center;
-    background-size: cover;
+    background-image: url(../../../../assets/images/wave.jpeg);
 }
 .feature-box{
     display: flex;
@@ -21,7 +19,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     padding: 20px;
 }
 
