--- a/my-app/src/Styles/exercises.css
+++ b/my-app/src/Styles/exercises.css
@@ -24,6 +24,9 @@
     color: white;
     background-color: #409915;
 }
+.shoW{
+    display: none;
+}
   
 /* ipad */
 @media (max-width:799px){
@@ -32,6 +35,9 @@
         align-items: center;
         justify-content: center;
     }
+    .shoW{
+        display: block;
+    }
 }
 
 /* mobile */
@@ -39,3 +45,15 @@
     
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+    width: 0.5em; /* Set this value to control the scrollbar width */
+    height: 0.5em; /* Set this value to control the scrollbar height */
+}
+  
+.hide-scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Set this to the desired thumb color */
+}
+  
+.hide-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent; /* Set this to the desired track color */
+}
