--- a/my-app/src/Components/Header/header.css
+++ b/my-app/src/Components/Header/header.css
@@ -57,6 +57,29 @@
     display: none;
 }
 
+.profile{
+    position: relative;
+}
+
+.profile-action{
+    position: absolute;
+    top: 115%;
+    right: 0px;
+    z-index: 10;
+    text-align: center;
+    padding: 2px 30px;
+    background-color: #409915;
+    color: #fff;
+    line-height: 30px;
+    display: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.show{
+    display: block;
+}
+
 /* ipad */
 @media (max-width:799px){
     .header{
